Criando componente de input

--- a/src/global.css
+++ b/src/global.css
@@ -12,7 +12,10 @@ body {
   background-color: #F5F5FA;
 
   font-family: "Noto Sans", sans-serif;
-  font-optical-sizing: auto;
+}
+
+input {
+  font-family: "Noto Sans", sans-serif;
 }
 
 button {
