Criando componente de button

--- a/src/global.css
+++ b/src/global.css
@@ -14,14 +14,13 @@ body {
   font-family: "Noto Sans", sans-serif;
 }
 
-input {
+input, button {
   font-family: "Noto Sans", sans-serif;
 }
 
 button {
   cursor: pointer;
   transition: filter 0.2s;
-
 }
 
 button:hover {
