--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -2,8 +2,8 @@
     height: 2.87rem;
     border-radius: 0.43rem;
 
-    background-color: #6363db;
-    border: 2px solid #4f4fb9;
+    background-color: #f9a74b;
+    border: 2px solid #e8891c;
     color: #ebebfc;
 
     padding: 0 0.87rem;
